--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,14 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
-//    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-//    compile('com.h2database:h2')
 //    compile('org.springframework.boot:spring-boot-starter-mustache')
 //    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
 //    compile('org.springframework.session:spring-session-jdbc')
-//    compile('org.mariadb.jdbc:mariadb-java-client')
+    compile('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16')
+    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+    compile('mysql:mysql-connector-java')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
     annotationProcessor 'org.projectlombok:lombok'
