- db mysql 연결 설정
- mybatis 설정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 #/Users/hachangjin/IdeaProjects/todo-service
 server:
-  port: 10005
+  port: 10007
   tomcat:
     accesslog:
       directory: /Users/hachangjin/IdeaProjects/todo-service/tomcatLogs
@@ -12,3 +12,27 @@ server:
       rotate: true
       suffix: .log
     basedir: /Users/hachangjin/IdeaProjects/todo-service/tomcatLogs
+
+#mysql : 121.169.7.171:33306
+spring:
+  datasource:
+    url: jdbc:log4jdbc:mysql://121.169.7.171:33306/todo?characterEncoding=UTF-8&serverTimezone=UTC
+    username: todo
+    password: gkckdwls12#$A
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    hikari:
+      connection-timeout: 5000
+      validation-timeout: 1000
+      maximum-pool-size: 10
+      minimum-idle: 2
+      connection-test-query: SELECT 1
+
+mybatis:
+  mapper-locations: mybatis/mapper/**/*.xml
+  configuration:
+    cache-enabled: true
+    lazy-loading-enabled: true
+    multiple-result-sets-enabled: true
+    use-column-label: false
+    default-statement-timeout: 65000
+    map-underscore-to-camel-case: true
