--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-//    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
 //    compile('org.springframework.session:spring-session-jdbc')
     compile('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
