--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,11 @@
+server:
+  error:
+    include-exception: true     # 오류 응답에 exception의 내용을 포함할지 여부
+    include-stacktrace: always  # 오류 응답에 stacktrace 내용을 포함할 지 여부
+
+---
 spring:
   profiles:
     active: local
     include: oauth
+
